copy over operator code from responsive-platform